Fix: tooltip alignment

--- a/src/modules/core/components/ExternalLink/ExternalLink.css
+++ b/src/modules/core/components/ExternalLink/ExternalLink.css
@@ -1,6 +1,3 @@
-@value queries: "~styles/queries.css";
-@value query700 from queries;
-
 .main {
   font-size: var(--size-small);
   font-weight: var(--weight-bold);
@@ -10,11 +7,4 @@
 .main:hover {
   text-decoration: underline;
   color: var(--dark-blue);
-}
-@media screen and query700 {
-  .main {
-    font-size: inherit;
-    font-weight: inherit;
-    color: inherit;
-  }
 }
