--- a/src/modules/dashboard/components/CreateColonyWizard/StepColonyName.css
+++ b/src/modules/dashboard/components/CreateColonyWizard/StepColonyName.css
@@ -45,4 +45,17 @@
   .main h3 span {
     overflow-wrap: anywhere;
   }
+
+  .nameForm > div:not(:last-child) {
+    min-height: 87px;
+  }
+
+  /* Tooltip popover */
+  .nameForm > div:nth-child(2) span > div:not(:only-child) {
+    max-width: calc(100vw - 50px);
+  }
+
+  .tooltipContent {
+    min-width: 0px;
+  }
 }
